# gazelle

./: .gitignore  0001-fix-compile-error-unuse-result.patch  0002-reduce-copy-in-send.patch  0003-execute-gazelle_init_sock-before-read-event.patch  0004-recvmsg-sendmsg-should-use-recvmsg_from_stack-sendms.patch  0005-fix-LD_PRELOAD.patch  0006-reduce-replenish-send_idle_ring-rpc-call.patch  0007-parse_host_addr-should-be-executed-before-parse_dpdk.patch  0008-fix-gazellectl-l-option-error.patch  0009-bind-cpu-fail-just-walrm.patch  0010-mfix-close-not-release-sock.patch  0011-fix-evetns-err.patch  0012-fix-dfx-info-show.patch  0013-balance-acept.patch  0014-fix-miss-evetn.patch  0015-fix-too-much-evetns.patch  0016-fix-dead-loop.patch  0017-remove-unuse-event.patch  0018-fix-gazellectl-show.patch  0019-fix-repeate-msg.patch  0020-fix-wakeup-typos.patch  0021-fix-pasre-numacpulist.patch  0022-fix-get-data-error.patch  0023-delete-numa-bind-param.patch  0024-refactor-event.patch  0025-fix-event-miss.patch  0026-get-fin-notice-app.patch  0027-fix-parse-config.patch  0028-fix-lstack-show-latency.patch  0029-fix-code-check.patch  0030-fix-accept-init-sock-faile.patch  0031-fix-reuse-ip-listen-event-don-t-notice.patch  0032-modify-readme-to-add-constraint.patch  0033-fix-accept-check-remain-conn.patch  0034-fix-wakeup-list-dead-loop.patch  0035-add-check-for-stack-params.patch  0036-the-sending-of-sock-last-data-is-triggered-by-lstack.patch  0037-add-gazellectl-lstack-constraint.patch  0038-refactor-event.patch  0039-update-license-lockless-queue.patch  (+258 more)
License/: License  Third_Party_Open_Source_Software_Notice.md
doc/: CONTRIBUTING.md  Gazelle使用指南.md  Practice_Series_Gazelle_Accelerates_MySQL.md  README.md  gazelle-开发者指南.md  gazelle-用户指南.md  memory-monitor.md  multiple-nic.md  multiple-nic_en.md  netperf.md  nic-support.md  pdump.md  pdump_en.md  programmer-guide.md  programmer-guide_en.md  redis.md  releasenote.md  support.md  support_en.md  user-guide.md  user-guide_en.md  virtio_user_en.md  实践系列(一)Gazelle加速mysql 20%.md  实践系列-Gazelle加速mysql.md
doc/conf/: my.cnf-arm
doc/en/: Practice_Series_Gazelle_Accelerates_MySQL.md  multiple-nic_en.md  netperf_en.md  nic-support_en.md  pdump_en.md  programmer-guide_en.md  redis_en.md  support_en.md
doc/mNIC/: mNIC.md
doc/pdump/: pdump.md
doc/test/: my.cnf-x86
doc/zh/: ReleaseNote  multiple-nic.md  pdump.md  programmer-guide.md  redis.md  releasenote.md  support.md  virtio_user.md  实践系列-Gazelle加速mysql.md
examples/: CMakeLists.txt  FAULT_INJECT.md  README.md  main.c
examples/inc/: bussiness.h  client.h  parameter.h  server.h  utilities.h
examples/src/: bussiness.c  client.c  parameter.c  server.c  utilities.c
examples/zerocopy/: Makefile  README.md
examples/zerocopy/inc/: client.h  server.h
examples/zerocopy/src/: client.c  server.c
lwip-src/: Makefile  Printlog.mk
lwip-src/api/: api_lib.c  api_msg.c  lwipgz_dir.mk  lwipgz_posix_api.c  lwipgz_sock.c  sockets.c  sys_arch.c
lwip-src/core/: init.c  ip.c  lwipgz_dir.mk  mcast.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  stats.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
lwip-src/include/: dpdk_version.h  lwipgz_event.h  lwipgz_flow.h  lwipgz_hlist.h  lwipgz_list.h  (+6 more)
src/ltran/: CMakeLists.txt  ltran.conf  ltran_base.h  ltran_config.c  ltran_config.h  ltran_dfx.c  ltran_errno.c  ltran_errno.h  ltran_ethdev.c  ltran_ethdev.h  ltran_forward.c  ltran_forward.h  ltran_instance.c  ltran_instance.h  ltran_jhash.h  ltran_log.h  ltran_monitor.c  ltran_monitor.h  ltran_opt.h  ltran_param.c  ltran_param.h  ltran_stack.c  ltran_stack.h  ltran_stat.c  ltran_stat.h  ltran_tcp_conn.c  ltran_tcp_conn.h  ltran_tcp_sock.c  ltran_tcp_sock.h  ltran_timer.c  ltran_timer.h  main.c
test/functest/test_ltran/: CMakeLists.txt  ltran_func_test.c
test/functest/test_ltran/config/: config_example.conf
test/fuzz/: CMakeLists.txt  fuzz.sh
test/fuzz/lstack_config/: CMakeLists.txt  lstack.conf  lstack_config_fuzz.c
test/fuzz/ltran_config/: CMakeLists.txt  ltran.conf  ltran_config_fuzz.c
test/unitest/: CMakeLists.txt  stub.c  test.sh
test/unitest/lstack/: CMakeLists.txt  lstack_param_test.c  lstack_test_case.h  lstack_unit_test.c  main.c  stub.c
test/unitest/lstack/config/: lstack.conf
test/unitest/ltran/: CMakeLists.txt  libnet_tcp_test.c  ltran_instance_test.c  ltran_param_test.c  ltran_stack_test.c  ltran_test_case.h  main.c
test/unitest/ltran/config/: ltran.conf
test/unitest_posix/: CMakeLists.txt  README.md  main.c
test/unitest_posix/include/: test_frame.h
test/unitest_posix/posix_api/rtc_epoll_Test/: CMakeLists.txt  rtc_epoll_test.c
test/unitest_posix/posix_api/rtw_accept_Test/: CMakeLists.txt  rtw_accept_test.c
test/unitest_posix/posix_api/rtw_bind_Test/: CMakeLists.txt  rtw_bind_test.c
test/unitest_posix/posix_api/rtw_connect_Test/: CMakeLists.txt  rtw_connect_test.c
test/unitest_posix/posix_api/rtw_epoll_Test/: CMakeLists.txt  rtw_epoll_test.c
test/unitest_posix/posix_api/rtw_getpeername_Test/: CMakeLists.txt  rtw_getpeername_test.c
test/unitest_posix/posix_api/rtw_getsockname_Test/: CMakeLists.txt  rtw_getsockname_test.c
test/unitest_posix/posix_api/rtw_listen_Test/: CMakeLists.txt  rtw_listen_test.c
test/unitest_posix/posix_api/rtw_poll_Test/: CMakeLists.txt  rtw_poll_test.c
test/unitest_posix/posix_api/rtw_read_recv_Test/: CMakeLists.txt  rtw_read_recv_test.c
test/unitest_posix/posix_api/rtw_rtc_socket_Test/: CMakeLists.txt  rtw_rtc_socket_test.c
test/unitest_posix/posix_api/rtw_select_Test/: CMakeLists.txt  rtw_select_test.c
test/unitest_posix/posix_api/rtw_set_getsockopt_Test/: CMakeLists.txt  rtw_set_getsockopt_test.c
test/unitest_posix/posix_api/rtw_write_send_Test/: CMakeLists.txt  rtw_write_send_test.c
tools/: config.json  gazelle_common.sh  gazelle_crontab.sh  gazelle_exit.sh  gazelle_setup.sh  lstack_setup.sh  manage.sh  readme.md  sync-gazelle-src.sh
tools/gztrace/: CMakeLists.txt  README.md
tools/gztrace/include/: param.h  record.h  syscall.h  trace.h
tools/gztrace/src/: main.c  param.c  record.c  syscall.c  trace.c
(+156 files in other folders)
